# determine-basal-native

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: basal_set_temp.h  dbjs.h  determine_basal.h
lib/: CMakeLists.txt  dbasal.c  dbasal.cpp
scripts/: bundle.sh  generate_bytecode.sh  headless-bundle.sh  update-glucose-date.py
test/: CMakeLists.txt  main.c
